# IVector

./: CMakeLists.txt  DESCRIPTION.md
BrokerImplementation/: CMakeLists.txt
BrokerImplementation/Broker/: Broker.cpp  Broker.h
BrokerImplementation/include/: IBroker.h  IMultiIndex.h  IProblem.h  ISolver.h  Interfacedllexport.h
CompactImplementation/: CMakeLists.txt
CompactImplementation/Compact/: Compact.cpp  Compact.h  MultiIndex.h
CompactImplementation/Helpers/: Helpers.cpp
LoggerImplementation/: CMakeLists.txt
ProblemImplementation/: CMakeLists.txt
ProblemImplementation/Problem/: Problem.cpp  Problem.h
ProblemImplementation/include/: ISet.h
SetImplementation/: CMakeLists.txt
SetImplementation/Set/: Set.cpp
SolverImplementation/: CMakeLists.txt
SolverImplementation/Solver/: Solver.cpp  Solver.h
TestProject/: CMakeLists.txt
TestProject/include/: IBroker.h  IDiffProblem.h
TestProject/test/: CompactTest.cpp  ProblemTest.cpp  SetTest.cpp  VectorTest.cpp  main.cpp  tests.hpp
VectorImplementation/: CMakeLists.txt
VectorImplementation/Vector/: Vector.cpp
include/: ILogger.h  IVector.h
src/: Iterator.cpp  Logger.h  Set.h  SetControlBlock.cpp  Vector.cpp  Vector.h
src/Compact/: Compact.cpp  Compact.h  MultiIndex.cpp
src/Helpers/: Helpers.h
src/Logger/: Logger.cpp
src/Problem/: Problem.cpp  Problem.h
test/: SetTest.cpp  VectorTest.cpp  main.cpp  tests.hpp
